@@ -1,6 +1,6 @@
 # Application dependencies
 
-self: play -> fap 2.1.RC2
+self: play -> fap 2.1.1RC2
 
 require:
     - play 1.2.4 :
