@@ -2,10 +2,13 @@ h2. Changelog
 
 h3. Versión 2.1.1RC2
 
+* Fixed Bug en autoenviar en los Forms.
+* Añadiendo Permisos a toda la parte de Baremación.
 * Nuevo atributo noVisibleEvaluador en Criterios.
 * Calculo de los criterios dependiendo de su valor máximo.
 * Recalculados los criterios dependiendo del rol de quien los vea.
 * Botón reevaluar en la tabla de evaluaciones.
+* Footer de la Solicitud a Evaluar.
 * Fixed Minor Bug en Baremación.
 
 h3. Versión 2.1.1RC1
